# blog_proj

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
db_data/: postmaster.pid
db_data/base/1/: 1259  2619  2619_vm  2696  2840  2841
db_data/base/16384/: 1247  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16504  16508  16509  16511  16512  16517  16518  16520  16522  16524  16525  16532  2224  24601  24605  24606  24608  24615  24617  24619  24621  24628  24629  24649  24653  24654  24684  24685  24690  24691  24693  24695  24697  (+79 more)
db_data/base/5/: 2619
db_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
db_data/pg_xact/: 0000
entity/: Cargo.toml
entity/src/: blog.rs  mod.rs  prelude.rs  session.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240730_022807_create_table_blog.rs  m20240730_022807_create_table_sessions.rs
src/: lib.rs  main.rs
src/models/: blog_model.rs  mod.rs  session_model.rs  user_models.rs
src/redis_manager/: mod.rs  session_setting.rs
src/routes/: auth.rs  blog.rs  file_upload.rs  middlewares.rs  mod.rs  registration.rs  user.rs
