[package]
name = "blog_proj"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
image = "0.25.2"
fast_image_resize = "4.2.1"
oauth2 = "4.4.2"
