[package]
name = "blog_proj"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
dotenv = "0.15.0"
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.208", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "limit", "timeout"] }
image = "0.25.2"
fast_image_resize = "4.2.1"
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["json"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
http = "1.1.0"
tower-cookies = "0.10.0"
openidconnect = "3.5.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
aws-config = "1.5.5"
aws-sdk-s3 = "1.46.0"
tower = "0.4.13"
anyhow = "1.0.86"


[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.10"

